# ditto-deploy

./: .bumpversion.cfg  .flake8  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: README.md  deployment.yaml  ditto-patch.yaml  hpa.yaml  ns.yaml  patch.yaml
ditto_deploy/: app.py  utils.py
infrastructure/: README.md  certificate.yaml  deployment.yaml  issuer.yaml  mutating-webhook.yaml  ns.yaml  service.yaml
